lesson3/homework/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-state-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-state
            port:
              name: web
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: web
            port: 
              number: 80
